# microkernel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: Spec.md  TODO.md  WASMFibers.md  api.md  architecture.md  development.md  examples.md  namespace_audit.md  sequencer-guide.md
include/microkernel/: actor.h  arpeggiator.h  cf_proxy.h  console.h  dashboard.h  display.h  gpio.h  http.h  i2c.h  led.h  local_kv.h  mailbox.h  message.h  midi.h  midi_monitor.h  mk_readline.h  mk_socket.h  namespace.h  pwm.h  runtime.h  scheduler.h  sequencer.h  services.h  shell.h  state_persist.h  supervision.h  transport.h  transport_tcp.h  transport_udp.h  transport_unix.h  types.h  wasm_actor.h  wire.h
src/: CMakeLists.txt  actor.c  arpeggiator_actor.c  base64.c  base64.h  caps_actor.c  cf_proxy.c  console_actor.c  dashboard_actor.c  display_actor.c  display_hal.h  display_hal_linux.c  font_8x16.h  gpio_actor.c  gpio_hal.h  gpio_hal_linux.c  http_conn.c  i2c_actor.c  i2c_hal.h  i2c_hal_linux.c  json_util.h  led_actor.c  led_hal.h  led_hal_linux.c  local_kv.c  log_actor.c  mailbox.c  message.c  midi_actor.c  midi_hal.h  midi_hal_linux.c  midi_monitor_actor.c  mk_readline.c  mk_socket_tcp.c  mk_socket_tls.c  name_registry.c  node_identity.c  ns_actor.c  payload_util.h  pwm_actor.c  (+23 more)
tests/: CMakeLists.txt  bench_actor.c  bench_http.c  test_arpeggiator.c  test_caps_actor.c  test_cf_proxy.c  test_console.c  test_dashboard.c  test_display.c  test_display_text.c  test_distributed_registry.c  test_fd_watcher.c  test_framework.h  test_gpio.c  test_hot_reload.c  test_http.c  test_http_realworld.c  test_http_runtime.c  test_http_server.c  test_https_realworld.c  test_i2c.c  test_led.c  test_local_kv.c  test_log_actor.c  test_mailbox.c  test_message.c  test_midi.c  test_midi_monitor.c  test_mk_socket.c  test_multinode.c  test_multinode_tcp.c  test_name_registry.c  test_ns_actor.c  test_ns_remote.c  test_pingpong.c  test_pwm.c  test_runtime.c  test_scheduler.c  test_sequencer.c  test_sse.c  (+14 more)
tests/wasm_modules/: counter_v1.c  counter_v1_lite.c  counter_v1_lite.wat  counter_v2.c  counter_v2_lite.c  counter_v2_lite.wat  echo.c  stateful.c
tools/shell/: CMakeLists.txt  main.c
tools/shell/shell_wasm/: Cargo.toml
tools/shell/shell_wasm/.cargo/: config.toml
tools/shell/shell_wasm/src/: lib.rs
